# robot_guidance

./: CMakeLists.txt  README.md  ReadME.md  ReadMe.md  package.xml  setup.cfg  setup.py
config/: waypoint_follower_params.yaml
launch/: april_tag_follower_launch.py  apriltag_follower.launch  apriltag_navigation_server_launch.py  depth_controller_launch.py  spawn_bot.launch  waypoint_follower.launch  waypoint_follower_launch.py  yolo_detect.launch
robot_guidance/: apriltag_follower.py  apriltag_navigator_server.py  depth_control_server.py  waypoint_follower.py
robot_guidance_interfaces/: CMakeLists.txt  ReadMe.md  package.xml
robot_guidance_interfaces/action/: GoToDepth.action  GoToSide.action  NavigateAprilTags.action
robot_guidance_pkg/: ReadME.md  package.xml  setup.cfg  setup.py
robot_guidance_pkg/config/: depth_control_params.yaml  nav2_params.yaml  poses_map.yaml  poses_map_left.yaml  poses_map_right.yaml  strafe_control_params.yaml  straffing_control_params.yaml  tag_map.yaml  waypoint_follower_params.yaml
robot_guidance_pkg/launch/: april_tag_follower_launch.py  apriltag_navigation_client_launch.py  apriltag_navigation_server_launch.py  depth_controller_launch.py  main_navigation_launch.py  nav2_launch.py  strafe_controller_launch.py  tag_map_publisher_launch.py  v4l2_camera_launch.py  waypoint_follower_launch.py
robot_guidance_pkg/maps/: empty_map.yaml  map.pgm  map.yaml
robot_guidance_pkg/robot_guidance_pkg/: apriltag_navigation_client.py  apriltag_navigation_server.py  depth_control_client.py  depth_control_client2.py  depth_control_server.py  main_navigation.py  simple_nav2_client.py  strafe_control_client.py  strafe_control_server.py  (+3 more)
rviz/: apriltag.rviz
scripts/: apriltag_follower.py  velocity_integrator.py  waypoint_follower.py  yolo_detect.py
urdf/: floating_bot.urdf
(+1 files in other folders)
