<?xml version="1.0"?>
<package format="3">
  <name>robot_guidance</name>
  <version>0.1.0</version>
  <description>AprilTag follower node for robot navigation</description>

  <maintainer email="icollado@stevens.edu">Ivana Collado</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_guidance_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Python third-party dependencies (not installed by ROS) -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>dt-apriltags</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>